# Aurelis

./: .aurelis.yaml  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflow/: python_publish.yml
.github/workflows/: ci.yml  publish-pypi.yml  pypi.yml  python_publish.yml  security.yml
aurelis/: __init__.py
aurelis/cli/: __init__.py  main.py
aurelis/utils/: __init__.py
docs/: ARCHITECTURE.md  CNAME  CONTRIBUTING.md  README.md  interactive-shell.md
docs/api/: README.md  azure-ai.md  cache.md  cli-commands.md  code-analyzer.md  code-generator.md  configuration.md  docs-generator.md  error-handling.md  filesystem.md  github-integration.md  interactive-shell.md  logging.md  model-orchestrator.md  model-types.md  request-response.md  security.md
docs/architecture/: README.md  enterprise.md  github-models.md  performance.md  security.md  system-overview.md
docs/deployment/: README.md  aws-deployment.md  azure-deployment.md  cicd-integration.md  container-deployment.md  docker-development.md  gcp-deployment.md  ide-integration.md  local-development.md  monitoring.md  performance.md  production-deployment.md  security.md
docs/user-guide/: best-practices.md  cli-reference.md  configuration.md  getting-started.md  github-models.md  installation.md  shell-guide.md
scripts/: release.py
